style: fix for dark mode pre, added temp to gitignore

--- a/app/static/css/_dark.scss
+++ b/app/static/css/_dark.scss
@@ -21,6 +21,10 @@
 .dark {
     background-color: $dark;
     color: #d3d3d3;
+    
+    pre {
+        color: #d3d3d3;
+    }
 
     #landing {
         .copy {
